# RAGProbe

./: .gitignore  README.md  debug_nli.py  pyproject.toml  scripts_git_history.ps1
src/ragprobe/: __init__.py  cli.py  dataset.py  perturb.py  report.py  runner.py
src/ragprobe/scorers/: __init__.py  base.py  judge.py  lexical.py  nli.py
tests/: test_ragprobe.py
