[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragprobe"
version = "0.1.0"
description = "Meta-evaluated faithfulness scoring for RAG answers"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
nli = ["torch>=2.2", "transformers>=4.40"]
dev = ["pytest>=8.0"]

[project.scripts]
ragprobe = "ragprobe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
